# c_renderer

./: CMakeLists.txt  run.sh
include/glad/: glad.h
libs/glad/: glad.c
libs/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw/examples/: Makefile  cmake_install.cmake  offscreen
libs/glfw/examples/boing.app/Contents/MacOS/: boing
libs/glfw/examples/gears.app/Contents/MacOS/: gears
libs/glfw/examples/heightmap.app/Contents/MacOS/: heightmap
libs/glfw/examples/particles.app/Contents/MacOS/: particles
libs/glfw/examples/sharing.app/Contents/MacOS/: sharing
libs/glfw/examples/simple.app/Contents/MacOS/: simple
libs/glfw/examples/splitview.app/Contents/MacOS/: splitview
libs/glfw/examples/wave.app/Contents/MacOS/: wave
libs/glfw/src/: Makefile  cmake_install.cmake
libs/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  events  glfwinfo  iconify  monitors  msaa  reopen  triangle-vulkan
libs/glfw/tests/empty.app/Contents/MacOS/: empty
libs/glfw/tests/gamma.app/Contents/MacOS/: gamma
libs/glfw/tests/icon.app/Contents/MacOS/: icon
libs/glfw/tests/inputlag.app/Contents/MacOS/: inputlag
libs/glfw/tests/joysticks.app/Contents/MacOS/: joysticks
libs/glfw/tests/opacity.app/Contents/MacOS/: opacity
libs/glfw/tests/tearing.app/Contents/MacOS/: tearing
libs/glfw/tests/threads.app/Contents/MacOS/: threads
libs/glfw/tests/timeout.app/Contents/MacOS/: timeout
libs/glfw/tests/title.app/Contents/MacOS/: title
libs/glfw/tests/windows.app/Contents/MacOS/: windows
src/: main.c
